@@ -1,14 +1,0 @@
-#!/bin/sh
-
-# Run in valgrind, with leak checking enabled
-valgrind --error-exitcode=111 -q --leak-check=full "$@" 2> .valgrind-log
-
-# Save the test result
-result="$?"
-
-if [ $result -eq 111 ]; then
-        cat .valgrind-log >&2
-        result=1
-fi
-
-exit $result
